@@ -124,6 +124,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
      see https://scan.coverity.com/download for more (currently at 4%)
 - [ ] rev 253 uploaded to coverity scan 23 Nov     
 **** TODO Options gamestate
+     CLOCK: [2017-01-31 mar. 22:48]--[2017-01-31 mar. 23:48] =>  1:00
      CLOCK: [2017-01-26 jeu. 19:39]--[2017-01-26 jeu. 20:25] =>  0:46
      CLOCK: [2017-01-24 mar. 19:03]--[2017-01-24 mar. 19:08] =>  0:05
      CLOCK: [2017-01-17 mar. 12:17]--[2017-01-17 mar. 12:46] =>  0:29
@@ -169,8 +170,13 @@ Error is fixed, was due to a src/services/Services.hpp old code
 - [ ] Maybe we could ask for OgreCfgSaver save using a CeguiDialog
   - [ ] Maybe we need a ModalDialog class that handles an bool exec() method
     We have an issue with the blocking exec function.
-    Maybe We must register a listener for this class and wit
+    Maybe We must register a listener for this class and wait
+    - Maybe we have to call Ogre::Root::renderOneFrame()
+      http://www.ogre3d.org/docs/api/1.8/class_ogre_1_1_root.html#aeaad25268c0ad8007ce8961a32242c77
   - [ ] Create a ConfirmationDialog class (based on ModalDialog)
+    - [ ] Current dialog is currently drawn but it seems events don't work
+      Also, geometry buffers aren't drawn
+      Calling clearGeometry(CEGUI::RQ_OVERLAY) doesn't fix that
 - [ ] Some overlays disappear in 1280x1024 resolution
   - List all overlays affected by this bug
     At least tempMessage
