@@ -22,6 +22,11 @@
 
 #include <iostream>
 
+#include <Ogre.h>
+#include <CEGUI/CEGUI.h>
+
+#include <OgreWindowEventUtilities.h> // Uses MEU::messagePump()
+
 /* Named constructor
  *
  * Create a dialog based on a CEGUI XML-based layout file.
@@ -45,9 +50,19 @@ ModalDialog::~ModalDialog()
 
 
 bool
-ModalDialog::exec()
+ModalDialog::exec(Ogre::Root* root)
 {
+  cout << "Entering ModalDialog::exec" << endl;
   waiting = true;
+  while (waiting)
+    {
+      //      cout << "Waiting in ModalDialog::exec()'s loop" << endl;
+      CEGUI::System::getSingleton().getDefaultGUIContext().clearGeometry(CEGUI::RQ_OVERLAY);
+
+      Ogre::WindowEventUtilities::messagePump();
+      root->renderOneFrame();
+    }
+
   show();
 }
 
